--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.8.0",
     "mermaid": "^11.6.0",
     "react": "^18.2.0",
+    "react-diff-view": "^3.3.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
